# console-widgets

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  README.rst  console_widgets.py  consolemenu.py  errors.py  setup.cfg  setup.py  test.bat  test.py  test.sh  tests.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement-request.md  feature_request.md
console_widgets/: __init__.py  console_widgets.py  errors.py  themes.py
console_widgets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: console_widgets.rst  modules.rst
docs/source/: authors.rst  conf.py  contributing.rst  glossary.rst  help.rst  index.rst  themes.rst
src/: consolewidgets.py
tests/: new.ideas  p3.bat  test1.py  tests.py  update.version
tests/expected/: test1.txt
