[metadata]
name = console_widgets
version = 0.0.54
author = Borna Gojsic
author_email = bornagojsic@gmail.com
description = A simple Python UI tool for terminal based widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bornagojsic/console-widgets
project_urls =
	Bug Tracker = https://github.com/bornagojsic/console-widgets/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6